.provarCaches/00D6C0000000xA6UAI/objects/Bucket_Account_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to configure the settings for the programmatic logic which assigns B2C contacts to bucket accounts. IMPORTANT: Do not create exceptions to the default org levels. Only configure the default org levels</description>
    <fields>
        <fullName>Bucket_Account_Owner_ID__c</fullName>
        <description>Specify the User ID of the User who will own bucket accounts. This user must be active. Note, changing this will not retroactively change the owner of bucket accounts already in the system.</description>
        <inlineHelpText>Specify the User ID of the User who will own bucket accounts. This user must be active. Note, changing this will not retroactively change the owner of bucket accounts already in the system.</inlineHelpText>
        <label>Bucket Account Owner ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket_Account_RecordTypeID__c</fullName>
        <description>Specify the record type of bucket accounts. Note, changing this will not retroactively change the record type of bucket accounts already in the system.</description>
        <inlineHelpText>Specify the record type of bucket accounts. Note, changing this will not retroactively change the record type of bucket accounts already in the system.</inlineHelpText>
        <label>Bucket Account RecordTypeID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Bucket_Name__c</fullName>
        <description>Define the default account name for bucket accounts. Note, changing this will not retroactively change the name of bucket accounts already in the system.</description>
        <inlineHelpText>Define the default account name for bucket accounts. Note, changing this will not retroactively change the name of bucket accounts already in the system.</inlineHelpText>
        <label>Default Bucket Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Size_of_Bucket__c</fullName>
        <description>Define how many contacts a bucket account may contain before it is considered closed and may not accept any more contacts. Note if you change this value, then you must request that all B2C contacts are reassigned to buckets. This can be done by setting their AccountID to null. Triggers will catch on this criteria and reassign them to buckets based on the new threshold.</description>
        <label>Maximum Size of Bucket</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>B2C Bucket Account Settings</label>
</CustomObject>